<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MidTerm Weather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moonset">Moonset</string>
    <string name="moonrise">Moonrise</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="humidity">Humidity</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="sign_up">Sign up</string>
    <string name="finish">Finish</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="welcome_back_let_s_start_now">Welcome back!\nLet\'s start now!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="let_s_join">Let\'s Join!</string>
    <string name="almost_there">Almost There</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome_message">Welcome back, %1$s</string>
    <string name="processing" tools:ignore="TypographyEllipsis">Processing...</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_current_city">Change Current City</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_preferences">Profile Preferences</string>
    <string name="application_preferences">Application Preferences</string>
    <string name="preferences">Preferences</string>
    <string name="about_app">About App</string>
    <string name="save">Save</string>
    <string name="feels_like">Feels like: </string>
    <string name="start_typing_city">Start typing city</string>
    <string name="welcome_back">Welcome\nBack</string>
    <string name="your_email">Your Email</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create\nAccount</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="finished_editing">Finished editing?</string>
    <string name="emailVerStatus">Email: %1$s</string>
    <string name="sign_out_verify">Sign out and Verify</string>
    <string name="today">Today</string>
    <string name="units">Units</string>
    <string name="fahrenheit">F</string>
    <string name="celsius">C</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="profile_info">Profile Info</string>

</resources>