<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".ui.preferences.PreferencesFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_background" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPreferencesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:drawableStart="@drawable/ic_arrow_back"
        android:drawablePadding="10dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/preferences"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvPreferencesTitle"
        tools:layout_editor_absoluteX="89dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:fontFamily="@font/opensans_light"
            android:text="@string/application_preferences"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llChangeCity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/preferences_item"
            android:gravity="center"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_map" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:text="@string/change_current_city"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llAboutApp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/preferences_item"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_info" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:text="@string/about_app"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:fontFamily="@font/opensans_light"
            android:text="@string/profile_preferences"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llChangeUserDetails"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/preferences_item"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_person" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:rotationY="180"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_arrow_back" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llLogOut"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/preferences_item"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:tint="@android:color/holo_red_light"
                app:srcCompat="@drawable/ic_logout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_vertical"
                android:text="@string/log_out"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>