<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/morning_background"
    tools:context=".ui.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="@font/advent_pro_light"
        android:text="@string/let_s_join"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="end"
        android:paddingTop="25dp"
        app:layout_constraintEnd_toEndOf="@id/ivDecoration"
        app:layout_constraintTop_toTopOf="@id/ivDecoration" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivDecoration"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_decoration"
        android:rotationY="-180"
        android:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFirstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:hint="First name"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="none"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:errorTextColor="@android:color/holo_red_light"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/tilLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDecoration"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/actor"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLastName"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@id/tilFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="20dp"
        android:hint="Last name"
        app:boxStrokeColor="@color/white"
        app:startIconTint="@color/white"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:errorTextColor="@android:color/holo_red_light"
        app:layout_constraintTop_toTopOf="@id/tilFirstName"
        app:layout_constraintBottom_toBottomOf="@id/tilFirstName"
        app:boxBackgroundMode="none"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:background="@drawable/rectangle"
            android:layout_height="match_parent"
            android:fontFamily="@font/actor"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="none"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:errorTextColor="@android:color/holo_red_light"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tilFirstName"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/white"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/actor"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/white"
        app:startIconTint="@color/white"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="none"
        app:hintTextColor="@color/white"
        app:passwordToggleTint="@color/white"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:errorTextColor="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_key">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/actor"
            android:background="@drawable/rectangle"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/advent_pro_light"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="73dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/advent_pro_light"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinueToLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/advent_pro_light"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="@color/white"
        tools:layout_editor_absoluteX="60dp" />
</androidx.constraintlayout.widget.ConstraintLayout>